While using git trying to connect back I lost most progress on the Mobile devices and some on Desktop now out of time and I apologize

--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Web Page</title>
+<title>Menu</title>
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <!-- students must convert divs to semantic tags -->
@@ -11,17 +11,21 @@
         
         <div id="header-con">
             <div id="main-header" class="grid-con">
-                <div id="header-box1" class="box-color">
+                <div id="header-box1" class="box-color">\
+                    <img src="./images/open_logo.svg">
                 </div>
                 <div id="main-nav" class="box-color">
                     <ul>
                         <li><a href=index.html>Home</a></li>
                         <li><a href="gallery.html">Menu</a></li>
-                        <li>Events</li>
-                        <li>Contact</li>
+                        <li><a href="#">Events</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div id="header-box2" class="box-color">
+                    <li>
+                        <a id="order-now" class="order-now" href="#">Place Order</a>
+                    </li>
                 </div>
             </div>
         </div> 
@@ -43,49 +47,49 @@
             <div class="grid-con" id="gallery">
                 <h2>Blandit At Tuctor</h2>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-nht.jpg" alt="White Hot Chocolate and After Eight treat">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/cc-muf.jpg" alt="Chocolate Chunk Muffin">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/cin-muf.jpg" alt="Cinnamon Muffin">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/french.jpg" alt="Croissant">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/hot-choc.jpg" alt="Hot Chocolate">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-choc.jpg" alt="White Hot Chocolate">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/whip-choc.jpg" alt="How Chocolate with whipped cream">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/marsh-choc.jpg" alt="hot chocolate with Marshmellows">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/hazard.jpg" alt="Hot chocolate with whip cream spinkles and a candycane">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-nht.jpg" alt="White Hot Chocolate and After Eight treat">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-nht.jpg" alt="White Hot Chocolate and After Eight treat">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-nht.jpg" alt="White Hot Chocolate and After Eight treat">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-nht.jpg" alt="White Hot Chocolate and After Eight treat">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-nht.jpg" alt="White Hot Chocolate and After Eight treat">
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="./images/wht-nht.jpg" alt="White Hot Chocolate and After Eight treat">
                 </div>
             </div>         
         </main>
@@ -93,8 +97,15 @@
         <div id="footer-con">
             <div class="grid-con" id="footer">
                 <div id="footer-logo" class="box-color">
+                    <img src="./images/open_logo.svg">
                 </div>
                 <div id="footer-nav" class="box-color">
+                    <ul>
+                        <li><a href=index.html>Home</a></li>
+                        <li><a href="gallery.html">Menu</a></li>
+                        <li><a href="#">Events</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
                 <div id="footer-newsletter1" class="box-color">
                 </div>
